--- a/config/config.properties
+++ b/config/config.properties
@@ -299,6 +299,15 @@ metrics.statistics.enable=false
 # InfluxDB retention policy (e.g. 2h, 52w).
 #metrics.influxDB.retention=
 
+# Whether to enable the Prometheus listener.
+#metrics.prometheus.listener.enable=false
+
+# The bind address for the Prometheus listener.
+#metrics.prometheus.listener.address=0.0.0.0
+
+# The port for the Prometheus listener.
+#metrics.prometheus.listener.port=7717
+
 # Whether to enable Graphite reporting.
 # Valid values: 'true' or 'false'.
 #metrics.enableGraphiteReporter=false
