--- a/config/standalone-config.properties
+++ b/config/standalone-config.properties
@@ -85,6 +85,11 @@
 # Default value: false
 #singlenode.metrics.influx.enable=false
 
+# Whether to enable the Prometheus listener.
+# Valid values: 'true' or 'false'
+# Default value: false
+#singlenode.metrics.prometheus.listener.enable=false
+
 # The interval at which to report metrics.
 # Default value: 60
 #singlenode.metrics.reporting.interval=60
